# ashpd

./: .gitignore  Cargo.toml
.github/workflows/: CI.yml
ashpd-backend-demo/: Cargo.toml
ashpd-backend-demo/data/: ashpd-gnome.portal
ashpd-backend-demo/src/: external_wayland_window.rs  external_window.rs  external_x11_window.rs  file_chooser.rs  main.rs  settings.rs  wallpaper.rs  wallpaper_preview.rs
ashpd-demo/data/resources/ui/: location.ui  notification.ui
src/: app_id.rs  lib.rs
src/backend/: account.rs  file_chooser.rs  mod.rs  request.rs  settings.rs  wallpaper.rs
src/desktop/: account.rs  file_chooser.rs  mod.rs  request.rs  secret.rs  wallpaper.rs
src/flatpak/: mod.rs
