[package]
name = "ashpd-backend-demo"
version = "0.1.0"
edition = "2021"

[dependencies]
adw = {package = "libadwaita", version = "0.2.0", features = ["v1_2"] }
anyhow = "1.0.68"
async-std = { version = "1.12.0", features = ["attributes"]}
async-trait = "0.1.60"
byteorder = "1.4.3"
futures = "0.3.25"
futures-channel = "0.3.25"
futures-util = "0.3.25"
gdk_wayland = {package = "gdk4-wayland", version = "0.5"}
gdk_x11 = {package = "gdk4-x11", version = "0.5", features = ["xlib"]}
gettext-rs = "0.7.0"
gtk = { version = "0.5.5", package = "gtk4", features = ["gnome_43"] }
libc = "0.2.139"
log = "0.4.17"
serde = { version = "1.0", features = ["derive"] }
serde_bytes = "0.11.8"
tracing-subscriber = "0.3.16"
url = "2.3.1"
x11 = { version = "2.18.1", features = ["xlib"] }
zbus = "3.6.2"
zvariant = { version = "3.9", features = ["gvariant"] }
once_cell = "1.17.0"

[dependencies.ashpd]
path = "../"
features = ["backend", "tracing"]
